# Word-Frequency

./: .gitignore  CMakeLists.txt  README.md
Include/: FileReader.h  FileWriter.h  InputHandler.h  Interface.h  ItemTracker.h  MenuManager.h
Src/: FileReader.cpp  FileWriter.cpp  InputHandler.cpp  Interface.cpp  ItemTracker.cpp  MenuManager.cpp  Structure.md  main.cpp
Tests/: FileReaderTest.cpp  InterfaceTest.cpp  ItemTrackerTest.cpp
